added flops to notebooks

--- a/LSTM_Benchmark.ipynb
+++ b/LSTM_Benchmark.ipynb
@@ -268,6 +268,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We can also calculate the complexity of the model using the number of FLOPs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Unsupported operator aten::lstm encountered 1 time(s)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of FLOPs: 63360\n",
+      "Number of Model Params: 68826\n"
+     ]
+    }
+   ],
+   "source": [
+    "import fvcore\n",
+    "from fvcore.nn import FlopCountAnalysis\n",
+    "\n",
+    "flops = FlopCountAnalysis(model, X_train.to(training_config.device))\n",
+    "print(f\"Number of FLOPs: {flops.total()}\")\n",
+    "print(f\"Number of Model Params: {sum(p.numel() for p in model.parameters())}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Can use Bayesian Optimisation to find the best hyperparameters for the model"
    ]
   },
