--- a/notebooks/ANN_CSTR_BM.ipynb
+++ b/notebooks/ANN_CSTR_BM.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +21,11 @@
     "from scipy import stats\n",
     "from scipy.stats import norm\n",
     "from tqdm import tqdm\n",
+    "import os\n",
+    "\n",
+    "import sys\n",
+    "sys.path.append(os.path.dirname(os.getcwd()))\n",
+    "\n",
     "from base import TrainingConfig, BaseModel, CNNConfig, LSTMConfig, MLPConfig\n",
     "from models import *\n",
     "from Bioprocess_Sim import *\n",
@@ -56,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
